--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -148,6 +148,45 @@ dd {
   margin-left: 0;
 }
 
+.starsForm{
+  background-color: blue;
+  height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stars-form{
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 700px;
+  width: 90%;
+}
+
+.stars-text{
+  background-color: yellow;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.sectionForm{
+  background-color: #007bff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 65%;
+  height: 600px;
+
+}
+
 blockquote {
   margin: 0 0 1rem;
 }
